[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/aero_tools/uires/hud_attitude/hud_pitch_mark.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/aero_tools/uires/hud_attitude/hud_attitude.gd" type="Script" id=2]

[node name="HUDAttitude" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarkH00" parent="." instance=ExtResource( 1 )]
mark_pitch_value_visible = false
mark_line_gap = 0.0

[node name="MarkP10" parent="." instance=ExtResource( 1 )]
margin_top = -200.0
margin_bottom = -200.0
mark_line_length = 500.0
mark_pitch_value = 10.0

[node name="MarkN10" parent="." instance=ExtResource( 1 )]
margin_top = 200.0
margin_bottom = 200.0
mark_line_length = 500.0
mark_pitch_value = 10.0

[node name="MarkP20" parent="." instance=ExtResource( 1 )]
margin_top = -400.0
margin_bottom = -400.0
mark_line_length = 500.0
mark_pitch_value = 20.0

[node name="MarkN20" parent="." instance=ExtResource( 1 )]
margin_top = 400.0
margin_bottom = 400.0
mark_line_length = 500.0
mark_pitch_value = 20.0
